<resources>
    <string name="app_name">Banter Box</string>

    <!-- Supabase Credentials -->
    <string name="supabase_url">https://tegyzsstiwjrixqifddn.supabase.co</string>
    <string name="supabase_api_key">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRlZ3l6c3N0aXdqcml4cWlmZGRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQwMDY2ODksImV4cCI6MjA1OTU4MjY4OX0.YvSCHiD2ZlcedWuOBy37CJWR-BXEHXTYKWSEfOTwRBw</string>
    <string name="supabase_user_profile_bucket_name">banterbox-user-profiles</string>
    <string name="supabase_post_bucket_name">banterbox-posts</string>

    <!--Login -->
    <string name="login_title">Welcome Back!</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_text">Don\'t have an account? Register</string>

    <!-- Register - Email and Password -->
    <string name="register_title">Create Account Credentials</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="next_button_text">Next</string>
    <string name="login_prompt_text">Already have an account? Login Here</string>

    <!-- Register - Profile -->
    <string name="create_profile_title">Create Your Profile</string>
    <string name="profile_image_desc">Profile picture</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="full_name_hint">Full Name</string>
    <string name="username_hint">Username</string>
    <string name="bio_hint">Bio</string>
    <string name="create_account">Create Account</string>

    <!-- Main - Home -->
    <string name="logout">Logout</string>
    <string name="main_view_title">Community Posts</string>
    <string name="fab_cd_add_post_button">Add post button</string>

    <!-- Navigation Menu -->
    <string name="menu_item_home">Home</string>
    <string name="menu_item_post">Post</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_search_posts">Search Posts</string>

    <!-- Create Post -->
    <string name="create_post_title">Create New Post</string>
    <string name="post_image_desc">Post picture</string>
    <string name="choose_image">Choose Image</string>
    <string name="caption_hint">Caption</string>
    <string name="create_post">Create Post</string>
    <string name="post_caption_placeholder">Post Caption</string>
    <string name="timestamp_placeholder">Timestamp</string>
    <string name="username_placeholder">Username</string>
    <string name="hint_add_tag">Add tag</string>

    <!-- Post Item -->
    <string name="like_button_description">Like Button</string>
    <string name="post_image_description">User Image Post</string>
    <string name="tv_number_of_likes">Number of likes</string>
    <string name="desc_comment_button">Comment Button</string>
    <string name="tv_number_of_comments">Number of Comments</string>

    <!-- Comment Dialog -->
    <string name="tv_comment_hint">Comment</string>
    <string name="btn_post_comment_text">Post Comment</string>

    <!-- Comment Item -->
    <string name="tv_user_name_text">User Name</string>
    <string name="tv_comment_text">Comment goes here</string>

    <!-- Profile -->
    <string name="tv_user_profile_title">User Profile</string>
    <string name="settings_button_desc">Settings Button</string>

    <!-- Settings Dialog -->
    <string name="tv_title_settings">Settings</string>
    <string name="btn_update_profile_information">Update Profile</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="dark_mode">Dark Mode</string>

    <!-- Logout Dialog -->
    <string name="tv_title">Are you sure you want to sign out?</string>
    <string name="iv_logout_icon">logout icon</string>
    <string name="btn_sign_out_text">Sign Out</string>
    <string name="btn_cancel_text">Cancel</string>

    <!-- Update Profile -->
    <string name="tv_title_update_profile">Update Your Profile</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="btn_update_profile">Save Changes</string>
    <string name="back_button_desc">Back Button</string>

    <!-- Change Password  -->
    <string name="tv_title_update_password">Change Account Password</string>
    <string name="btn_update_password">Change Password</string>
    <string name="tv_current_password_hint">Current Password</string>
    <string name="tv_new_password_hint">New Password</string>

    <!-- Search -->
    <string name="hint_search_posts">Search posts</string>
    <string name="hint_search_users">Search users</string>
    <string name="nothing_to_display">Nothing to display</string>
</resources>